Make page more responsive

--- a/index.html
+++ b/index.html
@@ -13,22 +13,28 @@
 
         <style>
             body {
-                margin: 0 auto;
-                margin-top: 2rem;
-                /* border: 1pt solid #777; */
-                box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
-                padding: 1rem;
-                width: 600px;
-                font-size: 1.2rem;
-                color: #000;
                 font-family: 'Source Sans 3', sans-serif;
                 overflow-y: scroll;
                 font-weight: 300;
                 line-height: 150%;
+                padding: 1rem;
+                font-size: 1.2rem;
+                color: #000;
             }
-            
+
+            @media(min-width: 720px) {
+                body {
+                    margin: 0 auto;
+                    margin-top: 2rem;
+                    /* border: 1pt solid #777; */
+                    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19) !important;
+                    width: 600px;
+                }
+            }
+
             #particle-select {
                 margin: 0 auto;
+                width: 100%;
             }
 
             .anti {
@@ -228,14 +234,14 @@
         <table id="particle-select">
             <tbody>
               <tr height="60px">
-                <td width="60px" class="particle quark" data-value="u">u</td>
-                <td width="60px" class="particle quark" data-value="c">c</td>
-                <td width="60px" class="particle quark" data-value="t">t</td>
-                <td width="60px" class="particle quark" data-value="u~"><span class="anti">u</span></td>
-                <td width="60px" class="particle quark" data-value="c~"><span class="anti">c</span></td>
-                <td width="60px" class="particle quark" data-value="t~"><span class="anti">t</span></td>
-                <td width="60px" class="particle gauge-boson" data-value="g">g</td>
-                <td width="60px" class="particle scalar-boson" data-value="H">H</td>
+                <td width="12.5%" class="particle quark" data-value="u">u</td>
+                <td width="12.5%" class="particle quark" data-value="c">c</td>
+                <td width="12.5%" class="particle quark" data-value="t">t</td>
+                <td width="12.5%" class="particle quark" data-value="u~"><span class="anti">u</span></td>
+                <td width="12.5%" class="particle quark" data-value="c~"><span class="anti">c</span></td>
+                <td width="12.5%" class="particle quark" data-value="t~"><span class="anti">t</span></td>
+                <td width="12.5%" class="particle gauge-boson" data-value="g">g</td>
+                <td width="12.5%" class="particle scalar-boson" data-value="H">H</td>
               </tr>
               <tr height="60px">
                 <td class="particle quark" data-value="d">d</td>
