Add a little footer with credits

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                 height: 180px;
                 margin-bottom: 1rem;
             }
+
+            #footer {
+                font-size: small;
+                color: gray;
+            }
         </style>
     </head>
     <body>
@@ -281,6 +286,11 @@
         <div id="feynman-container" style="display: flex; justify-content: center;">
             <p>Please make sure to select both EFT parameters and a particle.</p>
         </div>
+
+        <div id="footer">Made with &#127867; by Stephen Nicholas Swatman and
+        Rahul Balasubramanian using <a
+        href="https://photino.github.io/jquery-feyn/">jQuery.Feyn</a> and <a
+        href="https://smeftsim.github.io/">SMEFTsim</a>.</div>
 
         <script>
             function prettyparticle(p) {
