Make page look a little nicer

--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
         <title>EFT diagrams</title>
 
         <style>
+            html {
+                background-color: #eee;
+            }
+
             body {
+                margin: 0;
+                background-color: white;
                 font-family: 'Source Sans 3', sans-serif;
                 overflow-y: scroll;
                 font-weight: 300;
                 line-height: 150%;
-                padding: 1rem;
+                padding: 2rem;
                 font-size: 1.2rem;
                 color: #000;
             }
