--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             #particle-select {
                 margin: 0 auto;
                 width: 100%;
+                font-size: 1.5rem;
             }
 
             .anti {
