--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                                 scalar: {line: ''},
                                 photon: {line: ''},
                                 fermion: {line: '', arrow: false},
-                                gluon: {line: ''},
+                                gluon: {line: '', clockwise: true},
                                 label: {},
                                 symbol: {s1: ['78,90', 0, 'blob', 12, 12]}
                             }
@@ -403,8 +403,9 @@
                                     target = "fermion";
                                 }
 
+                                diag.vertex["v" + j] = (Math.cos(t) * 12 + 90) + "," + (Math.sin(t) * 12 + 90);
                                 diag.incoming["i" + j] = (Math.cos(t) * 90 + 90) + "," + (Math.sin(t) * 90 + 90);
-                                diag[target].line += "i" + j + "-v,";
+                                diag[target].line += "v" + j + "-i" + j + ",";
                                 diag.label["t" + j] = [(Math.cos(t - 0.175) * 80 + 90) + "," + (Math.sin(t - 0.175) * 80 + 90 + 5), prettyparticle(p)];
                             }
 
