cleaup a bit more

--- a/index_MFV.html
+++ b/index_MFV.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.default.css" integrity="sha512-J0JTRxsBEJ99DP4GamwciDi8VjALSrZneBYrv98BhqHPvlQP6gLbmmuddlYXHDB8hyLtefOIJFlpZBhksCtK8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="data_MFV.js"></script>
+        <script src="data/data_redpars_MFV.js"></script>
 
         <title>EFT diagrams</title>
 
@@ -215,69 +215,69 @@
             <p>
             <select id="select-eft">
                 <option value="cG">cG</option>
-                <option value="cW">cW</option>
                 <option value="cH">cH</option>
-                <option value="cHbox">cHbox</option>
+                <option value="cHB">cHB</option>
                 <option value="cHDD">cHDD</option>
                 <option value="cHG">cHG</option>
                 <option value="cHW">cHW</option>
-                <option value="cHB">cHB</option>
                 <option value="cHWB">cHWB</option>
-                <option value="ceH">ceH</option>
-                <option value="cuH0">cuH0</option>
-                <option value="cdH0">cdH0</option>
-                <option value="ceW">ceW</option>
-                <option value="ceB">ceB</option>
-                <option value="cuG0">cuG0</option>
-                <option value="cuW0">cuW0</option>
-                <option value="cuB0">cuB0</option>
-                <option value="cdG0">cdG0</option>
-                <option value="cdW0">cdW0</option>
-                <option value="cdB0">cdB0</option>
+                <option value="cHbox">cHbox</option>
+                <option value="cHd0">cHd0</option>
+                <option value="cHe">cHe</option>
                 <option value="cHl1">cHl1</option>
                 <option value="cHl3">cHl3</option>
-                <option value="cHe">cHe</option>
                 <option value="cHq10">cHq10</option>
                 <option value="cHq30">cHq30</option>
                 <option value="cHu0">cHu0</option>
-                <option value="cHd0">cHd0</option>
                 <option value="cHud0">cHud0</option>
-                <option value="cll">cll</option>
-                <option value="cll1">cll1</option>
-                <option value="cqq10">cqq10</option>
-                <option value="cqq110">cqq110</option>
-                <option value="cqq30">cqq30</option>
-                <option value="cqq310">cqq310</option>
-                <option value="clq10">clq10</option>
-                <option value="clq30">clq30</option>
-                <option value="cee">cee</option>
-                <option value="cuu0">cuu0</option>
-                <option value="cuu10">cuu10</option>
+                <option value="cW">cW</option>
+                <option value="cdB0">cdB0</option>
+                <option value="cdG0">cdG0</option>
+                <option value="cdH0">cdH0</option>
+                <option value="cdW0">cdW0</option>
                 <option value="cdd0">cdd0</option>
                 <option value="cdd10">cdd10</option>
-                <option value="ceu0">ceu0</option>
+                <option value="ceB">ceB</option>
+                <option value="ceH">ceH</option>
+                <option value="ceW">ceW</option>
                 <option value="ced0">ced0</option>
-                <option value="cud10">cud10</option>
-                <option value="cud80">cud80</option>
-                <option value="cle">cle</option>
-                <option value="clu0">clu0</option>
+                <option value="cee">cee</option>
+                <option value="ceu0">ceu0</option>
                 <option value="cld0">cld0</option>
-                <option value="cqe0">cqe0</option>
-                <option value="cqu10">cqu10</option>
-                <option value="cqu110">cqu110</option>
-                <option value="cqu80">cqu80</option>
-                <option value="cqu810">cqu810</option>
+                <option value="cle">cle</option>
+                <option value="cledq0">cledq0</option>
+                <option value="clequ10">clequ10</option>
+                <option value="clequ30">clequ30</option>
+                <option value="cll">cll</option>
+                <option value="cll1">cll1</option>
+                <option value="clq10">clq10</option>
+                <option value="clq30">clq30</option>
+                <option value="clu0">clu0</option>
                 <option value="cqd10">cqd10</option>
                 <option value="cqd110">cqd110</option>
                 <option value="cqd80">cqd80</option>
                 <option value="cqd810">cqd810</option>
-                <option value="cledq0">cledq0</option>
+                <option value="cqe0">cqe0</option>
+                <option value="cqq10">cqq10</option>
+                <option value="cqq110">cqq110</option>
+                <option value="cqq30">cqq30</option>
+                <option value="cqq310">cqq310</option>
+                <option value="cqu10">cqu10</option>
+                <option value="cqu110">cqu110</option>
+                <option value="cqu80">cqu80</option>
+                <option value="cqu810">cqu810</option>
                 <option value="cquqd1">cquqd1</option>
                 <option value="cquqd11">cquqd11</option>
                 <option value="cquqd8">cquqd8</option>
                 <option value="cquqd81">cquqd81</option>
-                <option value="clequ10">clequ10</option>
-                <option value="clequ30">clequ30</option>
+                <option value="cuB0">cuB0</option>
+                <option value="cuG0">cuG0</option>
+                <option value="cuH0">cuH0</option>
+                <option value="cuW0">cuW0</option>
+                <option value="cud10">cud10</option>
+                <option value="cud80">cud80</option>
+                <option value="cuu0">cuu0</option>
+                <option value="cuu10">cuu10</option>
             </select>
             </p>
 
@@ -349,14 +349,14 @@
                 "cledq"		:  "Q_{ledq} =  (\\bar l_p^j e_r)(\\bar d_s q_{tj})",
                 "cuH"		:  "Q_{uH} =  (H^\\dagger H)(\\bar q_p u_r \\widetilde H )",
                 "cqq1"		:  "Q_{qq}^{(1)} =  (\\bar q_p \\gamma_\\mu q_r)(\\bar q_s \\gamma^\\mu q_t) ",
-                "cquqd1"	:  "Q_{quqd}^{(1)} =  (\\bar q_p^j u_r) \\e_{jk} (\\bar q_s^k d_t) ",
+                "cquqd1"	:  "Q_{quqd}^{(1)} =  (\\bar q_p^j u_r) \\epsilon_{jk} (\\bar q_s^k d_t) ",
                 "cdHRe"		:  "Q_{dH} =  (H^\\dagger H)(\\bar q_p d_r H)",
                 "cqq3"		:  "Q_{qq}^{(3)} =  (\\bar q_p \\gamma_\\mu \\sigma^i q_r)(\\bar q_s \\gamma^\\mu \\sigma^i q_t) ",
-                "cquqd8"	:  "Q_{quqd}^{(8)} =  (\\bar q_p^j T^a u_r) \\e_{jk} (\\bar q_s^k T^a d_t) ",
+                "cquqd8"	:  "Q_{quqd}^{(8)} =  (\\bar q_p^j T^a u_r) \\epsilon_{jk} (\\bar q_s^k T^a d_t) ",
                 "clq1"		:  "Q_{lq}^{(1)} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar q_s \\gamma^\\mu q_t)",
-                "clequ1"	:  "Q_{lequ}^{(1)} =  (\\bar l_p^j e_r) \\e_{jk} (\\bar q_s^k u_t) ",
+                "clequ1"	:  "Q_{lequ}^{(1)} =  (\\bar l_p^j e_r) \\epsilon_{jk} (\\bar q_s^k u_t) ",
                 "clq3"		:  "Q_{lq}^{(3)} =  (\\bar l_p \\gamma_\\mu \\sigma^i l_r)(\\bar q_s \\gamma^\\mu \\sigma^i q_t) ",
-                "clequ3"	:  "Q_{lequ}^{(3)} =  (\\bar l_p^j \\sigma_{\\mu\\nu} e_r) \\e_{jk} (\\bar q_s^k \\sigma^{\\mu\\nu} u_t) "
+                "clequ3"	:  "Q_{lequ}^{(3)} =  (\\bar l_p^j \\sigma_{\\mu\\nu} e_r) \\epsilon_{jk} (\\bar q_s^k \\sigma^{\\mu\\nu} u_t) "
             }
 
             function prettyparticle(p) {
