--- a/index_U35.html
+++ b/index_U35.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.13.3/css/selectize.default.css" integrity="sha512-J0JTRxsBEJ99DP4GamwciDi8VjALSrZneBYrv98BhqHPvlQP6gLbmmuddlYXHDB8hyLtefOIJFlpZBhksCtK8g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="data_U35.js"></script>
+        <script src="data/data_redpars_U35.js"></script>
 
         <title>EFT diagrams</title>
 
@@ -215,109 +215,71 @@
             <p>
             <select id="select-eft">
                 <option value="cG">cG</option>
-                <option value="cW">cW</option>
+                <option value="cGtil">cGtil</option>
                 <option value="cH">cH</option>
-                <option value="cHbox">cHbox</option>
+                <option value="cHB">cHB</option>
+                <option value="cHBtil">cHBtil</option>
                 <option value="cHDD">cHDD</option>
                 <option value="cHG">cHG</option>
+                <option value="cHGtil">cHGtil</option>
                 <option value="cHW">cHW</option>
-                <option value="cHB">cHB</option>
                 <option value="cHWB">cHWB</option>
-                <option value="ceHRe">ceHRe</option>
-                <option value="cuHRe">cuHRe</option>
-                <option value="cdHRe">cdHRe</option>
-                <option value="ceWRe">ceWRe</option>
-                <option value="ceBRe">ceBRe</option>
-                <option value="cuGRe">cuGRe</option>
-                <option value="cuWRe">cuWRe</option>
-                <option value="cuBRe">cuBRe</option>
-                <option value="cdGRe">cdGRe</option>
-                <option value="cdWRe">cdWRe</option>
-                <option value="cdBRe">cdBRe</option>
+                <option value="cHWBtil">cHWBtil</option>
+                <option value="cHWtil">cHWtil</option>
+                <option value="cHbox">cHbox</option>
+                <option value="cHd">cHd</option>
+                <option value="cHe">cHe</option>
                 <option value="cHl1">cHl1</option>
                 <option value="cHl3">cHl3</option>
-                <option value="cHe">cHe</option>
                 <option value="cHq1">cHq1</option>
                 <option value="cHq3">cHq3</option>
                 <option value="cHu">cHu</option>
-                <option value="cHd">cHd</option>
-                <option value="cHudRe">cHudRe</option>
+                <option value="cHud">cHud</option>
+                <option value="cW">cW</option>
+                <option value="cWtil">cWtil</option>
+                <option value="cdB">cdB</option>
+                <option value="cdG">cdG</option>
+                <option value="cdH">cdH</option>
+                <option value="cdW">cdW</option>
+                <option value="cdd">cdd</option>
+                <option value="cdd1">cdd1</option>
+                <option value="ceB">ceB</option>
+                <option value="ceH">ceH</option>
+                <option value="ceW">ceW</option>
+                <option value="ced">ced</option>
+                <option value="cee">cee</option>
+                <option value="ceu">ceu</option>
+                <option value="cld">cld</option>
+                <option value="cle">cle</option>
+                <option value="cledq">cledq</option>
+                <option value="clequ1">clequ1</option>
+                <option value="clequ3">clequ3</option>
                 <option value="cll">cll</option>
                 <option value="cll1">cll1</option>
+                <option value="clq1">clq1</option>
+                <option value="clq3">clq3</option>
+                <option value="clu">clu</option>
+                <option value="cqd1">cqd1</option>
+                <option value="cqd8">cqd8</option>
+                <option value="cqe">cqe</option>
                 <option value="cqq1">cqq1</option>
                 <option value="cqq11">cqq11</option>
                 <option value="cqq3">cqq3</option>
                 <option value="cqq31">cqq31</option>
-                <option value="clq1">clq1</option>
-                <option value="clq3">clq3</option>
-                <option value="cee">cee</option>
-                <option value="cuu">cuu</option>
-                <option value="cuu1">cuu1</option>
-                <option value="cdd">cdd</option>
-                <option value="cdd1">cdd1</option>
-                <option value="ceu">ceu</option>
-                <option value="ced">ced</option>
-                <option value="cud1">cud1</option>
-                <option value="cud8">cud8</option>
-                <option value="cle">cle</option>
-                <option value="clu">clu</option>
-                <option value="cld">cld</option>
-                <option value="cqe">cqe</option>
                 <option value="cqu1">cqu1</option>
                 <option value="cqu8">cqu8</option>
-                <option value="cqd1">cqd1</option>
-                <option value="cqd8">cqd8</option>
-                <option value="cledqRe">cledqRe</option>
-                <option value="cquqd1Re">cquqd1Re</option>
-                <option value="cquqd11Re">cquqd11Re</option>
-                <option value="cquqd8Re">cquqd8Re</option>
-                <option value="cquqd81Re">cquqd81Re</option>
-                <option value="clequ1Re">clequ1Re</option>
-                <option value="clequ3Re">clequ3Re</option>
-                <option value="cGtil">cGtil</option>
-                <option value="cWtil">cWtil</option>
-                <option value="cHGtil">cHGtil</option>
-                <option value="cHWtil">cHWtil</option>
-                <option value="cHBtil">cHBtil</option>
-                <option value="cHWBtil">cHWBtil</option>
-                <option value="ceWIm">ceWIm</option>
-                <option value="ceBIm">ceBIm</option>
-                <option value="cuGIm">cuGIm</option>
-                <option value="cuWIm">cuWIm</option>
-                <option value="cuBIm">cuBIm</option>
-                <option value="cdGIm">cdGIm</option>
-                <option value="cdWIm">cdWIm</option>
-                <option value="cdBIm">cdBIm</option>
-                <option value="cHudIm">cHudIm</option>
-                <option value="ceHIm">ceHIm</option>
-                <option value="cuHIm">cuHIm</option>
-                <option value="cdHIm">cdHIm</option>
-                <option value="cledqIm">cledqIm</option>
-                <option value="cquqd1Im">cquqd1Im</option>
-                <option value="cquqd8Im">cquqd8Im</option>
-                <option value="cquqd11Im">cquqd11Im</option>
-                <option value="cquqd81Im">cquqd81Im</option>
-                <option value="clequ1Im">clequ1Im</option>
-                <option value="clequ3Im">clequ3Im</option>
-                <option value="ceH">ceH</option>
-                <option value="cuH">cuH</option>
-                <option value="cdH">cdH</option>
-                <option value="ceW">ceW</option>
-                <option value="ceB">ceB</option>
-                <option value="cuG">cuG</option>
-                <option value="cuW">cuW</option>
-                <option value="cuB">cuB</option>
-                <option value="cdG">cdG</option>
-                <option value="cdW">cdW</option>
-                <option value="cdB">cdB</option>
-                <option value="cHud">cHud</option>
-                <option value="cledq">cledq</option>
                 <option value="cquqd1">cquqd1</option>
                 <option value="cquqd11">cquqd11</option>
                 <option value="cquqd8">cquqd8</option>
                 <option value="cquqd81">cquqd81</option>
-                <option value="clequ1">clequ1</option>
-                <option value="clequ3">clequ3</option>
+                <option value="cuB">cuB</option>
+                <option value="cuG">cuG</option>
+                <option value="cuH">cuH</option>
+                <option value="cuW">cuW</option>
+                <option value="cud1">cud1</option>
+                <option value="cud8">cud8</option>
+                <option value="cuu">cuu</option>
+                <option value="cuu1">cuu1</option>
             </select>
             </p>
 
@@ -341,16 +303,16 @@
                 "cG"		:  "Q_G =  f^{abc} G_\\mu^{a\\nu} G_\\nu^{b\\rho} G_\\rho^{c\\mu}  ",
                 "ceW"		:  "Q_{eW} =  (\\bar l_p \\sigma^{\\mu\\nu} e_r) \\sigma^i H W_{\\mu\\nu}^i ",
                 "cee"		:  "Q_{ee} =  (\\bar e_p \\gamma_\\mu e_r)(\\bar e_s \\gamma^\\mu e_t) ",
-                "cGtil"		:  "Q_{\\widetilde G} =  f^{abc} \\widetilde G_\\mu^{a\\nu} G_\\nu^{b\\rho} G_\\rho^{c\\mu}  ",
+                "cGtil"		:  "Q_{\\widetilde  G} =  f^{abc} \\widetilde  G_\\mu^{a\\nu} G_\\nu^{b\\rho} G_\\rho^{c\\mu}  ",
                 "ceB"		:  "Q_{eB} =  (\\bar l_p \\sigma^{\\mu\\nu} e_r) H B_{\\mu\\nu} ",
                 "cuu"		:  "Q_{uu} =  (\\bar u_p \\gamma_\\mu u_r)(\\bar u_s \\gamma^\\mu u_t) ",
-                "cW"		:  "Q_W =  \\e^{ijk} W_\\mu^{i\\nu} W_\\nu^{j\\rho} W_\\rho^{k\\mu} ",
-                "cuGRe"		:  "Q_{uG} =  (\\bar q_p \\sigma^{\\mu\\nu} T^a u_r) \\widetilde H \\, G_{\\mu\\nu}^a ",
+                "cW"		:  "Q_W =  \\epsilon^{ijk} W_\\mu^{i\\nu} W_\\nu^{j\\rho} W_\\rho^{k\\mu} ",
+                "cuGRe"		:  "Q_{uG} =  (\\bar q_p \\sigma^{\\mu\\nu} T^a u_r) \\widetilde  H \\, G_{\\mu\\nu}^a ",
                 "cdd"		:  "Q_{dd} =  (\\bar d_p \\gamma_\\mu d_r)(\\bar d_s \\gamma^\\mu d_t) ",
-                "cWtil"		:  "Q_{\\widetilde W} =  \\e^{ijk} \\widetilde W_\\mu^{i\\nu} W_\\nu^{j\\rho} W_\\rho^{k\\mu} ",
-                "cuWRe"		:  "Q_{uW} =  (\\bar q_p \\sigma^{\\mu\\nu} u_r) \\sigma^i \\widetilde H \\, W_{\\mu\\nu}^i ",
+                "cWtil"		:  "Q_{\\widetilde  W} =  \\epsilon^{ijk} \\widetilde  W_\\mu^{i\\nu} W_\\nu^{j\\rho} W_\\rho^{k\\mu} ",
+                "cuWRe"		:  "Q_{uW} =  (\\bar q_p \\sigma^{\\mu\\nu} u_r) \\sigma^i \\widetilde  H \\, W_{\\mu\\nu}^i ",
                 "ceu"		:  "Q_{eu} =  (\\bar e_p \\gamma_\\mu e_r)(\\bar u_s \\gamma^\\mu u_t) ",
-                "cuBRe"		:  "Q_{uB} =  (\\bar q_p \\sigma^{\\mu\\nu} u_r) \\widetilde H \\, B_{\\mu\\nu} ",
+                "cuBRe"		:  "Q_{uB} =  (\\bar q_p \\sigma^{\\mu\\nu} u_r) \\widetilde  H \\, B_{\\mu\\nu} ",
                 "ced"		:  "Q_{ed} =  (\\bar e_p \\gamma_\\mu e_r)(\\bar d_s\\gamma^\\mu d_t) ",
                 "cH"		:  "Q_H =  (H^\\dagger H)^3",
                 "cdG"		:  "Q_{dG} =  (\\bar q_p \\sigma^{\\mu\\nu} T^a d_r) H\\, G_{\\mu\\nu}^a ",
@@ -363,40 +325,40 @@
                 "cHG"		:  "Q_{HG} =  H^\\dagger H\\, G^a_{\\mu\\nu} G^{a\\mu\\nu} ",
                 "cHl1"		:  "Q_{Hl}^{(1)} =  (H^\\dagger i\\overleftrightarrow{D}_\\mu H)(\\bar l_p \\gamma^\\mu l_r)",
                 "cle"		:  "Q_{le} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar e_s \\gamma^\\mu e_t)",
-                "cHGtil"	:  "Q_{H\\widetilde G} =  H^\\dagger H\\, \\widetilde G^a_{\\mu\\nu} G^{a\\mu\\nu} ",
+                "cHGtil"	:  "Q_{H\\widetilde  G} =  H^\\dagger H\\, \\widetilde  G^a_{\\mu\\nu} G^{a\\mu\\nu} ",
                 "cHl3"		:  "Q_{Hl}^{(3)} =  (H^\\dagger i\\overleftrightarrow{D}^i_\\mu H)(\\bar l_p \\sigma^i \\gamma^\\mu l_r)",
                 "clu"		:  "Q_{lu} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar u_s \\gamma^\\mu u_t) ",
                 "cHW"		:  "Q_{HW} =  H^\\dagger H\\, W^i_{\\mu\\nu} W^{I\\mu\\nu} ",
                 "cHe"		:  "Q_{He} =  (H^\\dagger i\\overleftrightarrow{D}_\\mu H)(\\bar e_p \\gamma^\\mu e_r)",
                 "cld"		:  "Q_{ld} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar d_s \\gamma^\\mu d_t) ",
-                "cHWtil"	:  "Q_{H\\widetilde W} =  H^\\dagger H\\, \\widetilde W^i_{\\mu\\nu} W^{i\\mu\\nu} ",
+                "cHWtil"	:  "Q_{H\\widetilde  W} =  H^\\dagger H\\, \\widetilde  W^i_{\\mu\\nu} W^{i\\mu\\nu} ",
                 "cHq1"		:  "Q_{Hq}^{(1)} =  (H^\\dagger i\\overleftrightarrow{D}_\\mu H)(\\bar q_p \\gamma^\\mu q_r)",
                 "cqe"		:  "Q_{qe} =  (\\bar q_p \\gamma_\\mu q_r)(\\bar e_s \\gamma^\\mu e_t)",
                 "cHB"		:  "Q_{HB} =   H^\\dagger H\\, B_{\\mu\\nu} B^{\\mu\\nu} ",
                 "cHq3"		:  "Q_{Hq}^{(3)} =  (H^\\dagger i\\overleftrightarrow{D}^i_\\mu H)(\\bar q_p \\sigma^i \\gamma^\\mu q_r)",
                 "cqu1"		:  "Q_{qu}^{(1)} =  (\\bar q_p \\gamma_\\mu q_r)(\\bar u_s \\gamma^\\mu u_t)",
-                "cHBtil"	:  "Q_{H\\widetildeB} =  H^\\dagger H\\, \\widetilde B_{\\mu\\nu} B^{\\mu\\nu} ",
+                "cHBtil"	:  "Q_{H\\widetilde B} =  H^\\dagger H\\, \\widetilde  B_{\\mu\\nu} B^{\\mu\\nu} ",
                 "cHu"		:  "Q_{Hu} =  (H^\\dagger i\\overleftrightarrow{D}_\\mu H)(\\bar u_p \\gamma^\\mu u_r)",
                 "cqu8"		:  "Q_{qu}^{(8)} =  (\\bar q_p \\gamma_\\mu T^a q_r)(\\bar u_s \\gamma^\\mu T^a u_t) ",
                 "cHWB"		:  "Q_{HWB} =  H^\\dagger \\sigma^i H\\, W^i_{\\mu\\nu} B^{\\mu\\nu}",
                 "cHd"		:  "Q_{Hd} =  (H^\\dagger i\\overleftrightarrow{D}_\\mu H)(\\bar d_p \\gamma^\\mu d_r)",
                 "cqd1"		:  "Q_{qd}^{(1)} =  (\\bar q_p \\gamma_\\mu q_r)(\\bar d_s \\gamma^\\mu d_t) ",
-                "cHWBtil"	:  "Q_{H\\widetilde WB} =  H^\\dagger \\sigma^i H\\, \\widetilde W^i_{\\mu\\nu} B^{\\mu\\nu} ",
-                "cHudRe"	:  "Q_{Hud}+\\hc =  i(\\widetilde H ^\\dagger D_\\mu H)(\\bar u_p \\gamma^\\mu d_r)",
+                "cHWBtil"	:  "Q_{H\\widetilde  WB} =  H^\\dagger \\sigma^i H\\, \\widetilde  W^i_{\\mu\\nu} B^{\\mu\\nu} ",
+                "cHudRe"	:  "Q_{Hud}+\\hc =  i(\\widetilde  H ^\\dagger D_\\mu H)(\\bar u_p \\gamma^\\mu d_r)",
                 "cqd8"		:  "Q_{qd}^{(8)} =  (\\bar q_p \\gamma_\\mu T^a q_r)(\\bar d_s \\gamma^\\mu T^a d_t)",
                 "ceH"		:  "Q_{eH} =  (H^\\dagger H)(\\bar l_p e_r H)",
                 "cll"		:  "Q_{ll} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar l_s \\gamma^\\mu l_t)",
                 "cledq"		:  "Q_{ledq} =  (\\bar l_p^j e_r)(\\bar d_s q_{tj})",
-                "cuH"		:  "Q_{uH} =  (H^\\dagger H)(\\bar q_p u_r \\widetilde H )",
+                "cuH"		:  "Q_{uH} =  (H^\\dagger H)(\\bar q_p u_r \\widetilde  H )",
                 "cqq1"		:  "Q_{qq}^{(1)} =  (\\bar q_p \\gamma_\\mu q_r)(\\bar q_s \\gamma^\\mu q_t) ",
-                "cquqd1"	:  "Q_{quqd}^{(1)} =  (\\bar q_p^j u_r) \\e_{jk} (\\bar q_s^k d_t) ",
+                "cquqd1"	:  "Q_{quqd}^{(1)} =  (\\bar q_p^j u_r) \\epsilon_{jk} (\\bar q_s^k d_t) ",
                 "cdHRe"		:  "Q_{dH} =  (H^\\dagger H)(\\bar q_p d_r H)",
                 "cqq3"		:  "Q_{qq}^{(3)} =  (\\bar q_p \\gamma_\\mu \\sigma^i q_r)(\\bar q_s \\gamma^\\mu \\sigma^i q_t) ",
-                "cquqd8"	:  "Q_{quqd}^{(8)} =  (\\bar q_p^j T^a u_r) \\e_{jk} (\\bar q_s^k T^a d_t) ",
+                "cquqd8"	:  "Q_{quqd}^{(8)} =  (\\bar q_p^j T^a u_r) \\epsilon_{jk} (\\bar q_s^k T^a d_t) ",
                 "clq1"		:  "Q_{lq}^{(1)} =  (\\bar l_p \\gamma_\\mu l_r)(\\bar q_s \\gamma^\\mu q_t)",
-                "clequ1"	:  "Q_{lequ}^{(1)} =  (\\bar l_p^j e_r) \\e_{jk} (\\bar q_s^k u_t) ",
+                "clequ1"	:  "Q_{lequ}^{(1)} =  (\\bar l_p^j e_r) \\epsilon_{jk} (\\bar q_s^k u_t) ",
                 "clq3"		:  "Q_{lq}^{(3)} =  (\\bar l_p \\gamma_\\mu \\sigma^i l_r)(\\bar q_s \\gamma^\\mu \\sigma^i q_t) ",
-                "clequ3"	:  "Q_{lequ}^{(3)} =  (\\bar l_p^j \\sigma_{\\mu\\nu} e_r) \\e_{jk} (\\bar q_s^k \\sigma^{\\mu\\nu} u_t) "
+                "clequ3"	:  "Q_{lequ}^{(3)} =  (\\bar l_p^j \\sigma_{\\mu\\nu} e_r) \\epsilon_{jk} (\\bar q_s^k \\sigma^{\\mu\\nu} u_t) "
             }
 
             function prettyparticle(p) {
